<resources>
    <string name="app_name">MYshot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="categories">Categories</string>
    <string name="top_photographers">Top Photographer</string>
    <string name="view_all_photographers">View all Photographers</string>
    <string name="ideas">Ideas</string>
    <string name="get_inspired_by_great_ideas">Get inspired by great ideas</string>
    <string name="view_all_photography_ideas">View all Photographers</string>
    <string name="rating">rating</string>
    <string name="ph_price">ph_price</string>
    <string name="photographer_name">Photographer_name</string>
    <string name="photographers">Photographers</string>
    <string name="save_details">Save Details</string>
    <string name="back_button">back_button</string>
</resources>